syntax = "proto3";

package order;

option go_package = "github.com/yb2020/odoc-proto/gen/go/order";

import "definitions/validate/Validate.proto";


// OrderStatus 订阅订单状态
enum OrderStatus {
	ORDER_STATUS_UNKNOWN       = 0; // 未知
	ORDER_STATUS_PENDING       = 1; // 待支付
	ORDER_STATUS_PAID          = 2; // 已支付
	ORDER_STATUS_PROCESSING    = 3; // 处理中
	ORDER_STATUS_COMPLETED     = 4; // 已完成
	ORDER_STATUS_CANCELLED     = 5; // 已取消 (用户主动取消或支付超时)
	ORDER_STATUS_PAYMENT_FAILED = 6; // 支付失败
}

// OrderType 订单类型 (1:Free会员，2:PRO会员，3:PRO会员附加积分包)
enum OrderType {
	ORDER_TYPE_UNKNOWN            = 0; // 未知
	ORDER_TYPE_SUB_FREE           = 1; // Free会员订阅
	ORDER_TYPE_SUB_PRO            = 2; // PRO会员订阅
	ORDER_TYPE_SUB_PRO_ADD_ON_CREDIT = 3; // PRO版附加积分包订阅
}

// 订单信息
message OrderInfo {
    string id = 1; // 订单ID
    string userId = 2; // 用户ID
	string membershipId = 3; // 会员ID
	string payOrderId = 4; // 支付订单ID
	OrderStatus orderStatus = 5; // 订单状态
	OrderType orderType = 6; // 订单类型
	string subName = 7; // 订阅名称
	uint64 subCredit = 8; // 订阅积分（单位：0.01个）
	uint64 subAddOnCredit = 9; // 订阅附加积分（单位：0.01个）
	uint64 subStartDate = 10; // 订阅开始时间
	uint64 subEndDate = 11; // 订阅结束时间
	uint64 price = 12; // 产品单价（单位：分）
	int32 numberCount = 13; // 订单数量
	uint64 totalAmount = 14; // 订单总金额（单位：分）
	uint64 payAmount = 15; // 实际支付金额（单位：分）
	string currency = 16; // 结算货币
	uint64 payExepiredAt = 17; // 支付过期时间, 订阅状态为待支付时,支付超时,过期后订阅状态更新为已取消
	uint64 payTime = 18; // 支付时间
    uint64 createdAt = 19; // 创建时间
    uint64 updatedAt = 20; // 更新时间
}

//@path /api/order/get-order-info
//@method GET
//@desc 获取订单信息By OrderId
message GetOrderInfoRequest {
    string orderId = 1 [(validate.rules).string = { min_len: 1 }];
}

message GetOrderInfoResponse {
    OrderInfo orderInfo = 1;
}


//@path /api/order/create-order
//@method POST
//@desc 创建订单
message CreateOrderRequest {
    OrderType orderType = 1; // 订单类型 (1:Free会员，2:PRO会员，3:PRO会员附加积分包)
    int32 numberCount = 2; // 订单数量, 类型1和2时,数量为1
}

message CreateOrderResponse {
    string orderId = 1;
}